# gofish

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  visual.txt
src/functions/: fishing.rs  mod.rs
src/model/: card.rs  deck.rs  enums.rs  mod.rs  player_deck.rs  player_name.rs  rank.rs  suit.rs
