[package]
name = "gofish"
version = "0.1.0"
authors = ["Dylan Howell <dylanleehowell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.3"
string-builder = "^0.2.0"
strum = "^0.20.0"
strum_macros = "^0.20.1"
